# Telegram-Shop

./: .env.dist  README.md  pyproject.toml
migrations/versions/: d65486655185_migration.py
src/: configuration.py  providers.py
src/bot/: __main__.py  dispatcher.py  on_startup.py
src/bot/dialogs/: __init__.py
src/bot/filters/: __init__.py  is_admin.py  is_buy.py  is_refill.py  is_select_lang.py  is_work.py  translator_filter.py
src/bot/handlers/: __init__.py  errors.py  service_handlers.py  start_handlers.py
src/bot/interactors/: __init__.py  payment_interactor.py
src/bot/kbs/: __init__.py  admin_common_functions.py  admin_payments.py  admin_products.py  admin_settings.py  main_reply.py  service_inline.py
src/bot/outer_middlewares/: __init__.py  bot_settings.py  is_active_md.py  is_reg_md.py  redis_user_md.py  translator_md.py
src/bot/states/: __init__.py  admin_state.py  service_states.py  user_states.py
src/bot/utilities/: __init__.py  misc.py
src/bot/widgets/: __init__.py  input.py  keyboards.py  texts.py
src/cache/: __init__.py  cache.py
src/cache/models/: __init__.py  base.py  bot_settings.py  user.py
src/cache/repos/: __init__.py  abstract.py  bot_settings.py  user.py
src/db/: __init__.py  database.py
src/db/enums/: __init__.py  refill_enums.py  user_enums.py  wallet_enums.py  withdraw_enums.py
src/db/models/: __init__.py  purchase.py  refill.py  user.py  wallet.py  (+1 more)
src/payments/: __init__.py  factory.py
src/translator/: translator.py
texts/EN/: errors.ftl  main.ftl  misc.ftl
texts/RU/: errors.ftl  main.ftl  misc.ftl
(+123 files in other folders)
